# FitnessTracker

./: CMakeLists.txt  Garmin-runs-50.csv  README.md  syntetiske_loebedata.csv  syntetiske_loebedata_ny.csv  syntetiske_loebedata_ny_converted.csv
Src/: CMakeLists.txt  main.c
Src/Core/: logic.c  logic.h  utils.c  utils.h
Src/Recommends/: recommends.c
Src/core/: data.c  generate_run.c  linear_regression.c  logic.c  recommends.c  run_data.c  training_effect.c  utils.c
Src/database/: Load_Dataset.c  data.c  data.h  database.h
Src/include/: data.h  generate_run.h  linear_regression.h  recommends.h  run_data.h  training_effect.h  utils.h
Src/recommendations/: recommends.c
Src/run_output/: recommends.c
Trashcan/: Garmin-runs-500.csv  Garmin-runs-50_with_VO2max.csv
dataset/: sports_training_dataset.csv
